tests/invalid/const_initialized_with_var.lang
module main

var hello i32 = 32;

func main() {
    const a i32 = hello;
}
